Fix Nav alignment.

--- a/src/resources/market-nav.css
+++ b/src/resources/market-nav.css
@@ -41,7 +41,7 @@
 
 #nav-market .menubtn {
     position: relative;
-    bottom: -2px;
+    bottom: -1px;
     line-height: 24px;
 }
 
